volatile long field corruption on x86_32

XMLWordPrintable

    • b22
    • x86

        The simple application (attached) shows broken volatile long field.
        Reproduced on 32-bit x86, interpreter VM mode only.

        The issue came with JDK-8202201 update: MO_RELAXED atomic access_store_at parmeter was lost, it breaks the atomicity.

        jcstress shows it is not the only problem for x86_32: jcstress.jar -t IntLongTest fails massively (in compiler mode) - see JDK-8223557 for this issue.

              Assignee:
              Boris Ulasevich
              Reporter:
              Boris Ulasevich
              Votes:
              0 Vote for this issue
              Watchers:
              9 Start watching this issue

                Created:
                Updated:
                Resolved: