8223472: volatile long field corruption on x86_32

Reviewed-by: eosterlund, dholmes, shade, coleenp